--- a/src/app/customers/customer-details/customer-details.scss
+++ b/src/app/customers/customer-details/customer-details.scss
@@ -37,7 +37,7 @@ dt {
   display: flex;
   flex-direction: column;
   width: 37.5rem;
-  height: 50rem;
+  // height: 50rem;
   padding: 1.875rem;
   overflow: hidden;
 }
