algorithmus first edit html and ts

--- a/src/app/customers/customer-details/customer-details.html
+++ b/src/app/customers/customer-details/customer-details.html
@@ -6,7 +6,12 @@
       <div class="container-customer">
         
     <address class="details">
-        
+      <!-- Kundennr -->
+    <dl>
+      <dt>Kundennr.</dt>
+      <dd>{{ customer()?.customer_number }}</dd>
+    </dl>
+
       <!-- Person -->
     <dl>
       <dt>Titel</dt>
