--- a/src/app/settings/algorithmus/algorithmus.scss
+++ b/src/app/settings/algorithmus/algorithmus.scss
@@ -1,5 +1,8 @@
 @use './../../../basic.scss';
 
+* {
+  // border: 1px solid black;
+}
 .container-preise {
   display: flex;
   flex-direction: column;
@@ -55,7 +58,7 @@
 
 .wrapper-content {
   display: flex;
-  width: 75rem;
+  width: 125rem;
   background-color: #fff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   border-radius: 0.75rem;
@@ -64,11 +67,18 @@
 }
 
 
+.services {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
 .container-edit,
 .container-prices {
   display: flex;
   flex-direction: column;
-  width: 37.5rem;
+  width: 62.5rem;
   // height: 50rem;
   padding: 1.875rem;
   overflow: hidden;
@@ -80,9 +90,52 @@
 
 .main-wrapper {
   display: flex;
-  max-width: 600px;
+  max-width: 1000px;
   width: 100%;
   overflow-x: hidden;
   border-radius: 0.75rem;
   gap: 1rem;
+}
+
+form {
+  width: 100%;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-control {
+  height: 2.125rem;
+  padding: 0.375rem 0.75rem;
+  border: 0.063rem solid #ccc;
+  border-radius: 0.25rem;
+  background-color: #fff;
+  color: #555;
+  font-size: 0.88rem;
+  font-weight: 300;
+  line-height: 1.25rem;
+  max-width: 100%;
+  width: 16rem;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.15s,
+    -webkit-box-shadow ease-in-out 0.15s;
+  -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+}
+
+.form-control:focus {
+  border-color: basic.$primary;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px var(--primary);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px basic.$primary;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto;
 }
