--- a/src/app/settings/algorithmus/algorithmus.scss
+++ b/src/app/settings/algorithmus/algorithmus.scss
@@ -66,8 +66,13 @@
   transition: basic.$first-transition;
 }
 
-
 .services {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.service {
   display: flex;
   justify-content: center;
   align-items: center;
