--- a/src/app/settings/algorithmus/algorithmus.html
+++ b/src/app/settings/algorithmus/algorithmus.html
@@ -13,7 +13,7 @@
           </thead>
           <tbody>
             
-            @for (service of serviceCatalog() ; track $index) {
+            @for (service of serviceCatalog() ; track service.id) {
               <tr>
                 <td> {{service.name }}</td>
                 @if(service.amount_fixed === null) {
