delete of service work properly

--- a/src/app/settings/algorithmus/algorithmus.html
+++ b/src/app/settings/algorithmus/algorithmus.html
@@ -126,7 +126,7 @@
                 }
               </div>
             }
-            <button type="button" (click)="removeService(service)">Löschen</button>
+            <button type="button" (click)="deleteService(service)">Löschen</button>
             </div>
             }
             <button type="button" (click)="addService()" [disabled]="!algorithmusForm.valid">
